Fix main panels overflow to scroll when needed

--- a/public/css/WebClient.css
+++ b/public/css/WebClient.css
@@ -52,6 +52,8 @@ header fieldset {
 #left-pane {
     float: left;
     width: 30%;
+    height: 100%;
+    overflow: auto;
 }
 #tree-view, #outline-view {
     width: 100%;
@@ -65,6 +67,8 @@ header fieldset {
     width: 70%;
     float: left;
     padding: 20px;
+    height: 100%;
+    overflow: auto;
 }
 td.separator {
     width: 5px;
